html chart script update

--- a/server/views/index.html
+++ b/server/views/index.html
@@ -21,7 +21,7 @@
 		<script src="angular-jwt/dist/angular-jwt.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.10/d3.min.js"></script>
 		<script src="ng-knob/dist/ng-knob.min.js"></script>
-		<script src="chartjs/chart.js"></script>
+		<script src="chart.js/dist/Chart.min.js"></script>
 		<script src="angular-chart.js/dist/angular-chart.min.js"></script>
 		<script src="scripts.js"></script>
 		<script src="templates.js"></script>
