integrate doc conversion bluemix service

--- a/client/app/shared/templates/sidenav.html
+++ b/client/app/shared/templates/sidenav.html
@@ -17,9 +17,9 @@
 	<span></span>
 	<div layout="row">
 		<md-button 	class="sidenavButton"
-					ng-class="{'sidenavButtonSelected': selectedMenu('/feed')}"
-					href = "/feed">
-			<i class="material-icons">view_headline</i>
+					ng-class="{'sidenavButtonSelected': selectedMenu('/convert_file')}"
+					href = "/convert_file">
+			<i class="material-icons">attach_file</i>
 		</md-button>
 	</div>
 	<span></span>
