--- a/client/scss/landing/main.scss
+++ b/client/scss/landing/main.scss
@@ -71,7 +71,7 @@
 	flex-grow: 0;
 }
 #landingBanner{
-	background-image:url('images/Desktop.png');	
+	background-image:url('images/photo.jpeg');	
 	background-size: 100%;
 	background-repeat: no-repeat;
 	height: 40vw;
