--- a/client/scss/main.scss
+++ b/client/scss/main.scss
@@ -61,6 +61,6 @@ body{
 @import 'home/main';
 @import 'user_profile/main';
 @import 'newsfeed/main';
-@import 'feed/main';
+@import 'convert_file/main';
 @import 'shared/main';
 @import 'auth/main';
