--- a/client/scss/newsfeed/main.scss
+++ b/client/scss/newsfeed/main.scss
@@ -33,3 +33,10 @@
 		width: 100%;
 	}
 }
+.thumb {
+    width: 24px;
+    height: 24px;
+    float: none;
+    position: relative;
+    top: 7px;
+}
