--- a/server/views/index.html
+++ b/server/views/index.html
@@ -23,6 +23,7 @@
 		<script src="ng-knob/dist/ng-knob.min.js"></script>
 		<script src="chart.js/dist/Chart.min.js"></script>
 		<script src="angular-chart.js/dist/angular-chart.min.js"></script>
+		<script src="ng-file-upload/dist/ng-file-upload-all.min.js"></script>
 		<script src="scripts.js"></script>
 		<script src="templates.js"></script>
 	</body>
